changes in html file

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
     <h1>"Rock, Paper, Scissors" game</h1>
-    <img src="./img/rps.jpg" alt="Rock, Paper, Scissors odds">
-    <div class="userchoice">
-        <button><img src="./img/rock.jpg" alt="rock"></button>
-        <button><img src="./img/paper.jpg" alt="paper"></button>
-        <button><img src="./img/scissors.jpg" alt="scissors"></button>
-    </div>
-    <div class="computerchoice">
-        <button><img src="./img/rock.jpg" alt="rock"></button>
-        <button><img src="./img/paper.jpg" alt="paper"></button>
-        <button><img src="./img/scissors.jpg" alt="scissors"></button>
+    <img class='guide' src="./img/rps.jpg" alt="Rock, Paper, Scissors odds">
+    <div class="choices">
+        <div class="userchoice">
+            <button><img class="imgbutton" src="./img/rock.png" alt="rock"></button>
+            <button><img class="imgbutton" src="./img/paper.png" alt="paper"></button>
+            <button><img class="imgbutton" src="./img/scissors.png" alt="scissors"></button>
+        </div>
+        <div class="computerchoice">
+            <button><img class="imgbutton" src="./img/rock.png" alt="rock"></button>
+            <button><img class="imgbutton" src="./img/paper.png" alt="paper"></button>
+            <button><img class="imgbutton" src="./img/scissors.png" alt="scissors"></button>
+        </div>
     </div>
 </body>
 </html>
