add more div tags

--- a/index.html
+++ b/index.html
@@ -11,16 +11,40 @@
 <body>
     <h1>"Rock, Paper, Scissors" game</h1>
     <img class='guide' src="./img/rps.jpg" alt="Rock, Paper, Scissors odds">
-    <div class="choices">
-        <div class="userchoice">
-            <button><img class="imgbutton" src="./img/rock.png" alt="rock"></button>
-            <button><img class="imgbutton" src="./img/paper.png" alt="paper"></button>
-            <button><img class="imgbutton" src="./img/scissors.png" alt="scissors"></button>
+    <div class="container">
+        <div class="user-container">
+            <h2 class="player-label">Human</h2>
+            <div class="player-container">
+                <div class="user-profile">
+                    <div><img src="./img/user.svg" alt="user icon" height="50px"></div>
+                    <div>
+                        <h3>Score</h3>
+                        <h2>0</h2>
+                    </div>
+                </div>
+                <div class="userchoice">
+                    <button><img src="./img/rock.png" alt="rock" width="110 px"></button>
+                    <button><img src="./img/paper.png" alt="paper" width="110 px"></button>
+                    <button><img src="./img/scissors.png" alt="scissors" width="110 px"></button>
+                </div>
+            </div>
         </div>
-        <div class="computerchoice">
-            <button><img class="imgbutton" src="./img/rock.png" alt="rock"></button>
-            <button><img class="imgbutton" src="./img/paper.png" alt="paper"></button>
-            <button><img class="imgbutton" src="./img/scissors.png" alt="scissors"></button>
+        <div class="computer-container">
+            <h2 class="player-label">Computer</h2>
+            <div class="player-container">
+                <div class="computer-profile">
+                    <div><img src="./img/laptop.svg" alt="computer icon" height="50px"></div>
+                    <div>
+                        <h3>Score</h3>
+                        <h2>0</h2>
+                    </div>
+                </div>
+                <div class="computerchoice">
+                    <button><img src="./img/rock.png" alt="rock" width="110 px"></button>
+                    <button><img src="./img/paper.png" alt="paper" width="110 px"></button>
+                    <button><img src="./img/scissors.png" alt="scissors" width="110 px"></button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
