fixing div alignement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="player-container">
                 <div class="user-profile">
                     <div><img src="./img/user.svg" alt="user icon" height="50px"></div>
-                    <div>
+                    <div class="score">
                         <h3>Score</h3>
                         <h2>0</h2>
                     </div>
@@ -34,7 +34,7 @@
             <div class="player-container">
                 <div class="computer-profile">
                     <div><img src="./img/laptop.svg" alt="computer icon" height="50px"></div>
-                    <div>
+                    <div class="score">
                         <h3>Score</h3>
                         <h2>0</h2>
                     </div>
